src/objects/pse__Expenses_UI_Personal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>pse__Allow_Delegated_Expense_Report_Entry__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If True, Expense will allow the data entry of Delegated Expenses on Edit Expenses UI.</description>
        <inlineHelpText>If True, Expense will allow the data entry of Delegated Expenses on Edit Expenses UI.</inlineHelpText>
        <label>Allow Delegated Expense Report Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Mixed_Billable_Non_Billable_ER__c</fullName>
        <defaultValue>&quot;True&quot;</defaultValue>
        <label>Allow Mixed Billable Non Billable ER</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Always_Use_Project_Expense_Limit_Amount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, the Project Expense Limit Amount would always be used</description>
        <inlineHelpText>If true, the Project Expense Limit Amount would always be used</inlineHelpText>
        <label>Always Use Project Expense Limit Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Line_Updates_Synchronous_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, Expense Line updates would be synchronous only</description>
        <inlineHelpText>If true, Expense Line updates would be synchronous only</inlineHelpText>
        <label>Expense Line Updates Synchronous Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Only_Users_Set_Submitted_On_Save__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, expense only users would be set submitted on save</description>
        <inlineHelpText>If true, expense only users would be set submitted on save</inlineHelpText>
        <label>Expense Only Users Set Submitted On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Max_Synchronous_Expense_Lines__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Maximum number of synchronous Expense Lines</description>
        <inlineHelpText>Maximum number of synchronous Expense Lines</inlineHelpText>
        <label>Max Synchronous Expense Lines</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Number_of_Top_Assignments__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Number of top assignments to be displayed.</description>
        <inlineHelpText>Number of top assignments to be displayed.</inlineHelpText>
        <label>Number of Top Assignments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Number_of_Top_Projects__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Specify the maximum number of To projects to be displayed.</description>
        <inlineHelpText>Specify the maximum number of To projects to be displayed.</inlineHelpText>
        <label>Number of Top Projects</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Records_Per_Page_Count__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Records Per Page Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Load_Limit__c</fullName>
        <defaultValue>200</defaultValue>
        <description>It specifies the maximum limit of resources that can be loaded</description>
        <inlineHelpText>Maximum limit of resources that can be loaded</inlineHelpText>
        <label>Resource Load Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Set_Default_to_Assignment_Milestone__c</fullName>
        <defaultValue>&quot;True&quot;</defaultValue>
        <label>Set Default to Assignment Milestone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Set_Owner_To_Resource_Salesforce_User__c</fullName>
        <defaultValue>&quot;True&quot;</defaultValue>
        <description>If true, sets owner to resource salesforce user</description>
        <inlineHelpText>If true, sets owner to resource salesforce user</inlineHelpText>
        <label>Set Owner To Resource Salesforce User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Default_Incurred_Non_Billable_Tax__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, Expense Default Non-Billable Tax will be show on Edit Expenses UI.</description>
        <inlineHelpText>If true, Expense Default Non-Billable Tax will be show on Edit Expenses UI.</inlineHelpText>
        <label>Show Default Incurred Non-Billable Tax</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Expense_Billable_Amount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, Expense Billable Amount will be show on Edit Expenses UI.</description>
        <inlineHelpText>If true, Expense Billable Amount will be show on Edit Expenses UI.</inlineHelpText>
        <label>Show Expense Billable Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Expense_Billable_Field__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, expense billable field will be show on Edit Expenses UI.</description>
        <inlineHelpText>If true, expense billable field will be show on Edit Expenses UI.</inlineHelpText>
        <label>Show Expense Billable Field</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Expense_Non_Billable_IncurredAmount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, Expense non billable incurred amount will be show on Edit Expenses UI.</description>
        <inlineHelpText>If true, Expense non billable incurred amount will be show on Edit Expenses UI.</inlineHelpText>
        <label>Show Expense Non-Billable IncurredAmount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Expense_milestone__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, expense milestone field will be show on Edit Expenses UI</description>
        <inlineHelpText>If true, expense milestone field will be show on Edit Expenses UI</inlineHelpText>
        <label>Show Expense milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Incurred_Non_Billable_Tax__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, Expense Non-Billable Tax will be show on Edit Expenses UI.</description>
        <inlineHelpText>If true, Expense Non-Billable Tax will be show on Edit Expenses UI.</inlineHelpText>
        <label>Show Incurred Non-Billable Tax</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Non_Reimbursable_Amount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, Expense Non-Reimbursable Amount will be show on Edit Expenses UI.</description>
        <inlineHelpText>If true, Expense Non-Reimbursable Amount will be show on Edit Expenses UI.</inlineHelpText>
        <label>Show Non-Reimbursable Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Submitted__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <description>String to denote Submitted</description>
        <inlineHelpText>String to denote Submitted</inlineHelpText>
        <label>Submitted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Use_Highest_Expense_Limit_Amount__c</fullName>
        <defaultValue>&quot;true&quot;</defaultValue>
        <description>If true, Highest Expense Limit Amount would be used</description>
        <inlineHelpText>If true, Highest Expense Limit Amount would be used</inlineHelpText>
        <label>Use Highest Expense Limit Amount</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Expenses UI Personal</label>
</CustomObject>